# autopilot

./: .coveragerc  .gitignore  .gitmodules  .readthedocs.yml  .travis.yml  9dof_test.py  CITATION.cff  CMakeLists.txt  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  MANIFEST.in  README.md  __init__.py  components  conftest.py  feature_requests.txt  gui_testing.py  jack_process.py  jack_test.py  layout.html  mlx90640_text.py  modules.rst  opencv_test.py  picapture_notes.txt  prefs.py  pyproject.toml  pytest.ini  requirements.rtd.txt  requirements.txt  requirements_docs.txt  requirements_pilot.txt  requirements_terminal.txt  setup.py  sound_upgrade.txt  spin_test.py  spinnaker_notes.txt  task_param_structure.txt  (+3 more)
.github/workflows/: tests.yml
autopilot/: __init__.py  exceptions.py  prefs.py  root.py
autopilot/agents/: agent.py  base.py  pilot.py  terminal.py
autopilot/core/: gui.py  hardware.py  loggers.py  networking.py  pilot.py  plots.py  reward.py  styles.py  subject.py  terminal.py  transforms.py  utils.py
autopilot/data/: __init__.py  subject.py  types.py
autopilot/gui/: __init__.py  dialog.py  gui.py  styles.py
autopilot/hardware/: __init__.py  cameras.py  esoteric.py  gpio.py  i2c.py  usb.py
autopilot/networking/: __init__.py  message.py  node.py  station.py
autopilot/setup/: __init__.py  __main__.py  forms.py  install_opencv.sh  install_pyspin.sh  presetup_pilot.sh  presetup_terminal.sh  request_helpers.py  run_script.py  scripts.py  setup_autopilot.py  setup_environment.sh  setup_environment_pi.sh  setup_environment_terminal.sh  setup_mlx90640.sh  setup_pilot.py  setup_terminal.py  welcome_msg.txt
autopilot/stim/: __init__.py  managers.py  stim.py
autopilot/tasks/: __init__.py  blink.py  children.py  ex_ContData.py  free_water.py  gonogo.py  graduation.py  nafc.py  parallax.py  protocol_scripts.py  task.py  task_scripts.py  test.py  tuning_curve.py
autopilot/transform/: __init__.py  coercion.py  geometry.py  image.py  logical.py  math.py  selection.py  timeseries.py  transforms.py  units.py
autopilot/utils/: __init__.py  common.py  decorators.py  hydration.py  invoker.py  log_parsers.py  loggers.py  plugins.py  registry.py  requires.py  types.py  wiki.py
autopilot/viz/: __init__.py  psychometric.py  trial_viewer.py
cmake/: CMakeLists.txt  jack.cmake  jack.txt.bak
core/: __init__.py  arraycontainer.py  dispatcher.py  gui.py  hardware.py  messenger.py  mouse.py  networking.py  paramgui.py  pilot.py  plots.py  pystatematrix.py  savedata.py  smclient.py  sounds.py  statematrix.py  terminal.py  timers.py  triggers.py  utils.py
doc/: README.txt  advanced_topics.rst  bugs.txt  conf.py  documentation.txt  getting_started.rst  index.rst  plan.org  reference.rst  settings.rst  sound.rst  state_transitions.rst  statematrix.rst
docs/: .buildinfo  CNAME  Makefile  autopilot.core.gui.html  autopilot.core.hardware.html  autopilot.core.html  autopilot.core.loggers.rst  autopilot.core.networking.html  autopilot.core.networking.rst  autopilot.core.pilot.html  autopilot.core.plots.html  autopilot.core.plots.rst  autopilot.core.rst  autopilot.core.styles.html  autopilot.core.subject.html  autopilot.core.terminal.html  autopilot.core.terminal.rst  autopilot.core.utils.html  autopilot.core.utils.rst  autopilot.external.html  autopilot.hardware.cameras.html  autopilot.hardware.cameras.rst  autopilot.hardware.esoteric.rst  autopilot.hardware.gpio.html  autopilot.hardware.html  autopilot.hardware.i2c.html  autopilot.hardware.rst  autopilot.hardware.usb.html  autopilot.prefs.html  autopilot.setup.html  autopilot.setup.rst  autopilot.setup.scripts.rst  autopilot.setup.setup_pilot.html  autopilot.setup.setup_scale.html  autopilot.setup.setup_terminal.html  autopilot.stim.html  autopilot.stim.managers.html  autopilot.stim.rst  autopilot.stim.sound.html  autopilot.stim.sound.jackclient.html  (+75 more)
docs/.doctrees/: autopilot.core.doctree  autopilot.core.gui.doctree  autopilot.core.hardware.doctree  autopilot.core.networking.doctree  autopilot.core.pilot.doctree  autopilot.core.plots.doctree  autopilot.core.styles.doctree  autopilot.core.subject.doctree  autopilot.core.terminal.doctree  autopilot.core.utils.doctree  autopilot.external.doctree  autopilot.hardware.cameras.doctree  autopilot.hardware.doctree  autopilot.hardware.gpio.doctree  autopilot.hardware.i2c.doctree  autopilot.hardware.usb.doctree  autopilot.prefs.doctree  autopilot.setup.doctree  autopilot.setup.setup_pilot.doctree  autopilot.setup.setup_scale.doctree  autopilot.setup.setup_terminal.doctree  autopilot.stim.doctree  autopilot.stim.managers.doctree  autopilot.stim.sound.doctree  autopilot.tasks.doctree  (+20 more)
examples/: example002_extratimers_noGUI.py  example012_fulltask_sound.py  example_transformation_dlc.ipynb  params_2014.py  wiki_integration.ipynb
notes/: c_extensions.txt  mac_pyside_install_issues.txt  setup_changes.txt  todo  todob4release
plugins/: performancedynamicsplot.py  psychometricplot.py  sidesplot.py  smdummy.py  soundclient.py  templates.py
pulser/: pulser.ino
requirements/: requirements_docs.txt  requirements_pilot.txt  requirements_terminal.txt  requirements_tests.txt  requirements_viz.txt
rpilot/: prefs.py
settings/: __init__.py  rigsettings_template.py  rpisettings.py
setup/: setup_pilot.py  setup_scale.py  setup_terminal.py
sound/: jackclient.py  jackserver.py  manager.py  pyoserver.py  sounds.py
statemachine/: PROTOCOL.txt  RPilot.py  statemachine.ino
stim/: __init__.py  manager.py  managers.py
taskontrol_remnants/: paramgui.py  savedata.py  utils.py
tasks/: __init__.py  free_water.py  graduation.py  nafc.py  protocol.py  task.py
templates/: __init__.py  nafc.py  test.py
test/: protocoltest011.py  protocoltest06.py
tests/: conftest.py  fixtures.py  pigpio_mocks.py  test-terminal.py  test_imports.py  test_jackd.py  test_logging.py  test_networking.py  test_plugins.py  test_prefs.py  test_registry.py  test_setup.py  test_sound.py  test_subject.py  test_terminal.py  test_transforms_geometry.py
utils/: update_pilot.sh
viz/: trial_viewer.py
(+861 files in other folders)
